RESOLVED FIXED121203
Fix indentation in JSC Debugger header files
https://bugs.webkit.org/show_bug.cgi?id=121203
Summary Fix indentation in JSC Debugger header files
Mark Lam
Reported 2013-09-11 19:18:59 PDT
This is purely cosmetic to fix the indentation in these files.
Attachments
the patch. (9.61 KB, patch)
2013-09-11 19:21 PDT, Mark Lam
rniwa: review+
Mark Lam
Comment 1 2013-09-11 19:21:42 PDT
Created attachment 211383 [details] the patch.
Mark Lam
Comment 2 2013-09-11 19:25:41 PDT
Thanks for the review. Landed in r155586: <http://trac.webkit.org/r155586>.
Note You need to log in before you can comment on or make changes to this bug.