Fixed indentation in JSC Debugger header files. https://bugs.webkit.org/show_bug.cgi?id=121203.

Reviewed by Ryosuke Niwa.

* debugger/Debugger.h:
* debugger/DebuggerActivation.h:
(JSC::DebuggerActivation::create):
(JSC::DebuggerActivation::createStructure):
* debugger/DebuggerCallFrame.h:
(JSC::DebuggerCallFrame::DebuggerCallFrame):
(JSC::DebuggerCallFrame::callFrame):
(JSC::DebuggerCallFrame::dynamicGlobalObject):
(JSC::DebuggerCallFrame::scope):
(JSC::DebuggerCallFrame::exception):



Canonical link: https://commits.webkit.org/139144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155586 268f45cc-cd09-0410-ab3c-d52691b4dbfc